--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,11 @@
     <div class="main">
         <div class="container">
             <div class="row">
+                {% for type, messages in app.session.flashbag.all() %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{type}}">{{message}}</div>
+                    {% endfor %}
+                {% endfor %}
                 <div class="col-12">
                     {% block body %}{% endblock %}
                 </div>
