--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -37,5 +37,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_product_new') }}">Create new</a>
+    <a class="btn btn-outline-success" href="{{ path('app_product_index') }}">Reload</a>
+    <a class="btn btn-outline-info" href="{{ path('app_product_new') }}">Create new</a>
+    <a class="btn btn-success" href="{{ path('app_parse_product') }}">Parse from URL</a>
 {% endblock %}
